aws-ec2-vpc-nginx/security_groups.tf
resource "aws_security_group" "nginx-sg" {
  description = "Security group for nginx"
  vpc_id      = aws_vpc.my_vpc_01.id
  tags = {
    Name = "nginx-sg"
  }

  # Inbound rules
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "SSH access"
  }
  
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "HTTP access"
  }

  # Outbound rules
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
